HW6 Fixes: searchKey logic in MapResumeStorage + AbstractStorage.getAllElements() correction + misc naming and placements